# Tropelicans

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  local-models.md  roadmap.md
examples/: tropelicans.config.example.json
src/tropelicans/: __init__.py  agents.py  cli.py  config.py  memory.py  models.py  runtime.py  skills.py  web.py  workspace.py
tests/: test_runtime.py
