[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tropelicans"
version = "0.1.0"
description = "CLI-first customizable AI runtime framework with agents, memory, skills, workspace awareness, and a web view."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AETHEL" }]

[project.optional-dependencies]
huggingface = ["transformers>=4.37", "torch", "huggingface-hub>=0.20"]

[project.scripts]
tropelicans = "tropelicans.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
